tests/ui/empty_enum.stderr
error: explicit #[repr(...)] is required for enum without any variants
 --> $DIR/tests/ui/empty_enum.rs:3:5
  |
3 |     enum A {}
  |     ^^^^^^^^^
